--- a/index.html
+++ b/index.html
@@ -132,9 +132,19 @@
   <div class="portfolio-content">
     <img src="كارت2.jpeg" alt="عمل 1">
     <img src="كارت3.jpeg" alt="عمل 2">
+    <img src="صوره جديد (6).jpeg" alt="عمل 2">
     <img src="كارت4.jpeg" alt="عمل 3">
     <img src="كارت5.jpeg" alt="عمل 4">
+    <img src="صوره جديد (5).jpeg" alt="عمل 4">
     <img src="كارت6 (1).jpeg" alt="عمل 4">
+    <img src="صوره جديد (7).jpeg" alt="عمل 4">
+    <img src="صوره جديد (8).jpeg" alt="عمل 4">
+    <img src="صوره جديد (2).jpeg" alt="عمل 4">
+    <img src="صوره جديد (4).jpeg" alt="عمل 4">
+    <img src="صوره جديد (9).jpeg" alt="عمل 4">
+    <img src="صوره جديد (3).jpeg" alt="عمل 4">
+    <img src="صوره جديد (1).jpeg" alt="عمل 4">
+    <img src="صوره جديد (10).jpeg" alt="عمل 4">
     <img src="كارت7.jpeg" alt="عمل 4">
   </div>
 </div>
@@ -484,4 +494,5 @@ document.getElementById('contactForm').addEventListener('submit', function(e){
 
 </body>
 </html>
+
 
