--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
       <!-- الصورة -->
       <div class="about-img" data-aos="fade-left" data-aos-duration="1200">
-        <img src="صوره 2.jpg" alt="مصمم جرافيك مصطفى حسن">
+        <img src="صووووور.jpeg" alt="مصمم جرافيك مصطفى حسن">
       </div>
 
     </div>
@@ -494,5 +494,6 @@ document.getElementById('contactForm').addEventListener('submit', function(e){
 
 </body>
 </html>
+
 
 
